kubernetes/email-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: email-backend
  name: email-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: email-backend
  template:
    metadata:
      labels:
        io.kompose.service: email-backend
    spec:
      containers:
        - env:
            - name: BOOTSTRAP_SERVERS
              valueFrom:
                configMapKeyRef:
                  key: BOOTSTRAP_SERVERS
                  name: email-backend-env
            - name: DJANGO_SECRET_KEY
              valueFrom:
                configMapKeyRef:
                  key: DJANGO_SECRET_KEY
                  name: email-backend-env
            - name: EMAIL_HOST
              valueFrom:
                configMapKeyRef:
                  key: EMAIL_HOST
                  name: email-backend-env
            - name: EMAIL_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: EMAIL_PASSWORD
                  name: email-backend-env
            - name: EMAIL_PORT
              valueFrom:
                configMapKeyRef:
                  key: EMAIL_PORT
                  name: email-backend-env
            - name: EMAIL_USERNAME
              valueFrom:
                configMapKeyRef:
                  key: EMAIL_USERNAME
                  name: email-backend-env
            - name: GROUP_ID
              valueFrom:
                configMapKeyRef:
                  key: GROUP_ID
                  name: email-backend-env
            - name: KAFKA_TOPIC
              valueFrom:
                configMapKeyRef:
                  key: KAFKA_TOPIC
                  name: email-backend-env
            - name: SASL_MECHANISMS
              valueFrom:
                configMapKeyRef:
                  key: SASL_MECHANISMS
                  name: email-backend-env
            - name: SASL_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: SASL_PASSWORD
                  name: email-backend-env
            - name: SASL_USERNAME
              valueFrom:
                configMapKeyRef:
                  key: SASL_USERNAME
                  name: email-backend-env
            - name: SECURITY_PROTOCOL
              valueFrom:
                configMapKeyRef:
                  key: SECURITY_PROTOCOL
                  name: email-backend-env
          image: ambassador-microservice/email:0.0.2
          name: email-backend
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
