kubernetes/ambassador-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: ambassador-backend
  name: ambassador-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ambassador-backend
  template:
    metadata:
      labels:
        io.kompose.service: ambassador-backend
    spec:
      containers:
        - args:
            - sh
            - -c
            - python manage.py wait_for_db && python manage.py runserver 0.0.0.0:8000
          image: ambassador-microservice/ambassador:0.0.1
          name: ambassador-backend
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"

---

apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: ambassador-backend
  name: ambassador-backend
spec:
  ports:
    - name: "8003"
      port: 8003
      targetPort: 8000
  selector:
    io.kompose.service: ambassador-backend

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: ambassador-queue
  name: ambassador-queue
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ambassador-queue
  template:
    metadata:
      labels:
        io.kompose.service: ambassador-queue
    spec:
      containers:
        - args:
            - sh
            - -c
            - python manage.py wait_for_db && python consumer.py
          image: ambassador-microservice/ambassador:0.0.1
          name: ambassador-queue
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  template:
    metadata:
      labels:
        io.kompose.service: redis
    spec:
      containers:
        - image: redis
          name: redis
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"

---

apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: redis
  name: redis
spec:
  ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
  selector:
    io.kompose.service: redis
